--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 <li><a href="/laukey">Laukey</a> - A Feature Rich Password Manager with Beutiful UI with lots of features</li>
 </ul>
 <p>In future there will be more Projects</p>
-<h2 id="community">Community:</h2>
+<h2 id="community"><a href="/community">Community</a>:</h2>
 <p>We are currently trying to build a Community so we can be motivated and find members to maintain the errorly, if you want to connect to us or have some queries, feel free to visit <a href="/community">here</a></p>
  <!--<div style="display:flex; align-items: center; justify-content: center; gap: 30px;">
      <a href="https://discord.gg/JwfsagYANM" target="_blank">Discord</a>
