added laukey source code

--- a/public/index.html
+++ b/public/index.html
@@ -96,14 +96,14 @@
 </div>
 <h2 id="about">About</h2>
 <p>Errorly is a small but growing team focused on building modern, useful tools that solve real problems. We’re passionate about creating high-quality digital products with clean design, strong functionality, and a focus on user experience. Our goal is to deliver simple yet powerful solutions that are accessible to everyone.</p>
-<h2 id="projects">Projects</h2>
+<h2 id="projects"><a href="/projects">Projects</a></h2>
 <p>We&rsquo;re just getting started, but here are a few projects already available:</p>
 <ul>
 <li><a href="/sumcode">SumCode</a>, a smart tool that helps you generate code quickly and efficiently</li>
 <li><a href="/Laukey">Laukey</a>, a powerful and beautifully designed password manager packed with features</li>
 </ul>
 <p>More projects are in development and will be released soon.</p>
-<h2 id="community">Community</h2>
+<h2 id="community"><a href="/community">Community</a></h2>
 <p>We’re actively building a community around Errorly. Whether you&rsquo;re a developer, creator, or just someone who likes what we’re doing, we’d love to connect.</p>
 <p>If you have questions, ideas, or just want to say hello, visit our <a href="/community">Community page</a> to get involved.</p>
 
