--- a/public/Laukey/index.html
+++ b/public/Laukey/index.html
@@ -59,8 +59,10 @@
 <a href="/" class="title"><h1>Errorly</h1></a>
 <nav>
 <a href="/">Home</a>
-<a href="/projects">Projects</a>
-<a href="/community">Community</a>
+
+<a href="/projects/">Projects</a>
+
+<a href="/roadmap/">Roadmap</a>
 
 
 
@@ -86,7 +88,8 @@
     <img src="/laukey_applications/laukey_logo.png" alt="Laukey logo" width="256" height="256" />
 </div>
 <blockquote>
-<p>Laukey is in Beta, So You May encounter some bugs.</p></blockquote>
+<p>Laukey is in Beta, So You May encounter some bugs.</p>
+</blockquote>
 <p>Ever Needed a Password manager to manage all your password in one place? Obviously You Have And Thats Why We are happy to present you Laukey - An Password Manager with lot of features With A Modern UI</p>
 <h2 id="screenshots">ScreenShots</h2>
 <img src="/laukey_applications/ss/1.png" alt="Screenshot 1" style="max-width:100%; margin-bottom:20px; border-radius:12px;" />
@@ -107,7 +110,8 @@
 </ul>
 <h2 id="-downloads">📥 Downloads</h2>
 <blockquote>
-<p>Note for Windows users: You may receive a security warning when downloading. This is expected, as the software isn’t code-signed due to the <a href="https://www.digicert.com/signing/compare-code-signing-certificates">high cost of a certificate</a>. Click &ldquo;More info&rdquo; &gt; &ldquo;Run anyway&rdquo; to proceed safely.</p></blockquote>
+<p>Note for Windows users: You may receive a security warning when downloading. This is expected, as the software isn’t code-signed due to the <a href="https://www.digicert.com/signing/compare-code-signing-certificates">high cost of a certificate</a>. Click &ldquo;More info&rdquo; &gt; &ldquo;Run anyway&rdquo; to proceed safely.</p>
+</blockquote>
 <div style="display:flex; justify-content:center; gap:40px; margin-top:20px;">
   <details open style="min-width:200px; text-align:center;">
     <summary>🪟 Windows</summary>
