--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -57,8 +57,10 @@
 <a href="/" class="title"><h1>Errorly</h1></a>
 <nav>
 <a href="/">Home</a>
-<a href="/projects">Projects</a>
-<a href="/community">Community</a>
+
+<a href="/projects/">Projects</a>
+
+<a href="/roadmap/">Roadmap</a>
 
 
 
@@ -84,22 +86,6 @@
 These are some works that are been done, and other projects are currently in development, for more info you can visit our discord server or our github page</p>
 <div style="max-width:1000px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.5rem;font-family:sans-serif;">
   <!-- Card 1 -->
-  <div onclick="window.location.href='/projects/sumcode'" style="cursor: pointer; border:1px solid #484f5e;border-radius:12px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.05);transition:transform 0.2s,box-shadow 0.2s;">
-    <a href="/sumcode" style="display:block;color:inherit;text-decoration:none;">
-        <img src="/sumcodepreview.png" alt="SumCode" style="width:100%;height:140px;object-fit:cover;"/>
-    </a>
-    <div style="padding:1rem;">
-      <h3 style="margin:0;font-size:1.1rem;font-weight:600;color:#fff;">SumCode</h3>
-      <p style="margin:0.5rem 0 0.75rem;font-size:0.9rem;color:#bcbcbc;">A website to generate Snippet of Code For Free, and the website is also opensource for anyone to look in the code</p>
-      <div style="display:flex;justify-content:space-between;align-items:center;font-size:0.85rem;">
-        <span style="color:#374151;"><code>Website</code></span>
-        <span>
-          <a href="https://github.com/ERRORLY/sumcode.site" style="margin-right:0.5rem;">Code</a>
-          <a href="https://sumcode.site" style="">Site</a>
-        </span>
-      </div>
-    </div>
-  </div>
   <div style="border:1px solid #484f5e;border-radius:12px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.05);transition:transform 0.2s,box-shadow 0.2s;">
     <a href="/Laukey" style="display:block;color:inherit;text-decoration:none;">
         <img src="/laukey_applications/laukeypreview.png" alt="SumCode" style="width:100%;height:140px;object-fit:cover;"/>
@@ -112,6 +98,22 @@ These are some works that are been done, and other projects are currently in dev
         <span>
           <a href="https://github.com/ERRORLY/Laukey" style="margin-right:0.5rem;">Code</a>
           <a href="/Laukey" style="">Site</a>
+        </span>
+      </div>
+    </div>
+  </div>
+  <div onclick="window.location.href='/projects/sumcode'" style="cursor: pointer; border:1px solid #484f5e;border-radius:12px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.05);transition:transform 0.2s,box-shadow 0.2s;">
+    <a href="/sumcode" style="display:block;color:inherit;text-decoration:none;">
+        <img src="/sumcodepreview.png" alt="SumCode" style="width:100%;height:140px;object-fit:cover;"/>
+    </a>
+    <div style="padding:1rem;">
+      <h3 style="margin:0;font-size:1.1rem;font-weight:600;color:#fff;">SumCode</h3>
+      <p style="margin:0.5rem 0 0.75rem;font-size:0.9rem;color:#bcbcbc;">A website to generate Snippet of Code For Free, and the website is also opensource for anyone to look in the code</p>
+      <div style="display:flex;justify-content:space-between;align-items:center;font-size:0.85rem;">
+        <span style="color:#374151;"><code>Website</code></span>
+        <span>
+          <a href="https://github.com/ERRORLY/sumcode.site" style="margin-right:0.5rem;">Code</a>
+          <a href="https://sumcode.site" style="">Site</a>
         </span>
       </div>
     </div>
